--- a/templates/components/custom/header/header-top.html
+++ b/templates/components/custom/header/header-top.html
@@ -1,3 +1,4 @@
+{{#if theme_settings.show_header_top}}
 <div class="headerTop">
     <div class="container">
         <div class="flex flex-between flex-center-y-tablet">
@@ -46,3 +47,4 @@
         </div>
     </div>
 </div>
+{{/if}}
