--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -39,16 +39,70 @@
     z-index: 99;
     @include clearfix;
 
-    .page-type-default & {
-        background-color: #F3F6F5;
-    }
-
     @include smin-m {
         position: relative;
         display: flex;
         flex-direction: column;
         height: auto;
         overflow: visible;
+    }
+
+    // * ------ Header Layout 2 ------
+    &.header-layout-2 {
+        .header-logo-transparent {
+            display: none;
+        }
+
+        .page-type-default & {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: transparent;
+            transition: all 0.35s;
+
+            .headerMiddle {
+                background-color: transparent;
+            }
+
+            &:not(.is-sticky) {
+                .header-logo-image:not(.no-logo-transparent) {
+                    display: none;
+
+                    &.header-logo-transparent {
+                        display: block;
+                    }
+                }
+
+                @include smin-m {
+                    .navUser-action,
+                    .navPages-action span:not(.navPages-label) {
+                        color: #ffffff;
+                    }
+
+                    &.is-visible {
+                        background-color: $header-bg;
+
+                        .header-logo-image {
+                            display: block;
+
+                            &.header-logo-transparent {
+                                display: none !important;
+                            }
+                        }
+
+                        .navUser-action,
+                        .navPages-action span:not(.navPages-label) {
+                            color: stencilColor("navPages-color");
+                        }
+                    }
+                    
+                }
+            }
+        }
+
+        &.is-sticky {
+            background-color: $header-bg;
+        }
     }
 
     /* Header Top */
@@ -104,23 +158,29 @@
         @include smax-s {
             padding: 4px 0;
         }
-
-        .page-type-default & {
-            background-color: #F3F6F5;
-        }
-
+        
         &_item {
             display: flex;
             justify-content: space-between;
             align-items: center;
 
             &--left {
+                .header-layout-2 & {
+                    @include smin-m {
+                        flex: 1 0 0;
+                        justify-content: flex-start;
+                    }
+                }
             }
             
             &--center {
                 flex: 1;
                 width: 100%;
                 max-width: 440px;
+
+                @include smin-m {
+                    justify-content: center;
+                }
 
                 > .items {
                     width: 100%;
@@ -197,6 +257,12 @@
             }
 
             &--right {
+                .header-layout-2 & {
+                    @include smin-m {
+                        flex: 1 0 0;
+                        justify-content: flex-end;
+                    }
+                }
             }
 
 
@@ -210,6 +276,19 @@
                     }
                 }
 
+                .navUser-icon {
+                    .icon {
+                        width: 24px;
+                        height: 24px;
+                        fill: transparent;
+                        margin: 0;
+                    }
+                }
+
+                + .items {
+                    margin-left: 22px;
+                }
+
                 &.item--searchMobile {
                     @include smax-m {
                         margin-left: 50px;
@@ -221,34 +300,6 @@
                 }
 
                 &.item--cart {
-                    margin-left: 24px;
-
-                    @include smax-m {
-                        margin-left: 50px;
-                    }
-
-                    @include smax-s {
-                        margin-left: 15px;
-                    }
-
-                    > .navUser-action {
-                        background-color: #ffffff;
-                        border: 1px solid #F1F0F0;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        width: 48px;
-                        height: 48px;
-                        border-radius: 8px;
-
-                        @include smax-xs {
-                            width: 24px;
-                            height: 24px;
-                            background-color: transparent;
-                            border: none;
-                        }
-
-                    }
                     .header-countPill {
                         position: absolute;
                         top: -8px;
@@ -264,64 +315,13 @@
                             right: -12px;
                         }
                     }
-    
-                    .navUser-icon {
-                        .icon {
-                            width: 24px;
-                            height: 24px;
-                            fill: transparent;
-                            margin: 0;
-                        }
-                    }
-                }
-
-                &.item--account {
-                    @include smax-m {
-                        .navUser-icon {
-                            .icon {
-                                fill: #000000;
-                            }
-                        }
-                    }
-                }
-
-                @include smax-m {
-                    > .navUser-action {
-                        background-color: #ffffff;
-                        border: 1px solid #F1F0F0;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        width: 48px;
-                        height: 48px;
-                        border-radius: 8px;
-
-                        @include smax-xs {
-                            width: 24px;
-                            height: 24px;
-                            background-color: transparent;
-                            border: none;
-                        }
-                    }
-    
-                    .navUser-icon {
-                        .icon {
-                            width: 24px;
-                            height: 24px;
-                            fill: transparent;
-                            margin: 0;
-                        }
-                    }
                 }
 
                 &.item--hamburger {
                     @include smax-m {
                         position: relative;
-                        background-color: #ffffff;
-                        border: 1px solid #F1F0F0;
                         width: 48px;
                         height: 48px;
-                        border-radius: 8px;
 
                         @include smax-xs {
                             width: 24px;
