--- a/templates/components/common/store-logo.html
+++ b/templates/components/common/store-logo.html
@@ -7,11 +7,10 @@
              title="{{settings.store_logo.title}}">
         {{else}}
         <div class="header-logo-image-container">
-            <img class="header-logo-image"
-                 src="{{getImage settings.store_logo.image 'logo_size'}}"
-                 srcset="{{getImageSrcset1x2x settings.store_logo.image theme_settings.logo_size}}"
-                 alt="{{settings.store_logo.title}}"
-                 title="{{settings.store_logo.title}}">
+            {{#if theme_settings.logo_transparent}}
+                <img class="header-logo-image header-logo-transparent" src="https://cdn11.bigcommerce.com/s-{{settings.store_hash}}/product_images/uploaded_images/{{theme_settings.logo_transparent}}" alt="{{settings.store_logo.title}}" title="{{settings.store_logo.title}}">
+            {{/if}}
+            <img class="header-logo-image{{#unless theme_settings.logo_transparent}} no-logo-transparent{{/unless}}" src="{{getImage settings.store_logo.image 'logo_size'}}" alt="{{settings.store_logo.title}}" title="{{settings.store_logo.title}}">
         </div>
         {{/if}}
     {{else}}
