--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -12,7 +12,9 @@ blog:
         limit: {{theme_settings.homepage_blog_posts_count}}
 ---
 {{#partial "hero"}}
-    {{{region name="home_below_menu"}}}
+    {{#if theme_settings.show_default_regions}}
+        {{{region name="home_below_menu"}}}
+    {{/if}}
     {{#and carousel carousel.slides.length}}
         {{> components/carousel arrows=theme_settings.homepage_show_carousel_arrows play_pause_button=theme_settings.homepage_show_carousel_play_pause_button}}
     {{/and}}
