--- a/assets/scss/settings/global/color/_color.scss
+++ b/assets/scss/settings/global/color/_color.scss
@@ -73,3 +73,14 @@ $color-textLink-active:             stencilColor("color-textLink--active");
 // -----------------------------------------------------------------------------
 $focusTooltip-textColor:            stencilColor("focusTooltip-textColor");
 $focusTooltip-backgroundColor:      stencilColor("focusTooltip-backgroundColor");
+
+
+// Custom
+// -----------------------------------------------------------------------------
+$color-custom-red:                  #D81C17;
+$color-custom-grey:					#EDEDED;
+$color-custom-greyDark:				#cecece;
+$color-custom-black:                #212121;
+$color-custom-blue:                 #003CA6;
+$color-custom-white:                #ffffff;
+$color-custom-loading:				#f9f9f9;
