--- a/assets/scss/components/foundation/buttons/_buttons.scss
+++ b/assets/scss/components/foundation/buttons/_buttons.scss
@@ -3,167 +3,128 @@
 // =============================================================================
 
 .button {
-    position: relative;
-    z-index: 1;
-    overflow: hidden;
-    font-family: $fontFamily-sans;
-    font-size: $fontSize-root - 2;
-    font-weight: $fontWeight-bold;
-    font-style: normal;
+    position: relative; 
     user-select: none;
     appearance: none;
-    width: 100%;
-    text-decoration: none;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    border: 1px solid $buttonStyle-default-borderColor;
+    border-radius: 0;
+    background-color: $buttonStyle-default-backgroundColor;
+    font-family: $body-font-family;
+    font-size: $fontSize-root - 3;
+    line-height: 1.375;
+    color: $buttonStyle-default-color;
+    font-style: normal;
+    font-weight: $fontWeight-normal;
     text-align: center;
-    border-radius: 3px;
-    margin: 0;
-    padding: 8px;
-    line-height: 24px;
-    min-width: 153px;
+    text-decoration: none;
     cursor: pointer;
-    border: 1px solid $buttonStyle-primary-borderColor;
-    color: $buttonStyle-primary-color;
-    background-color: $buttonStyle-primary-backgroundColor;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    transition: $anchor-transition;
+    vertical-align: middle;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    transition: .25s ease-out;
+    transition-property: color,background,border;
+    backface-visibility: hidden;
 
-    @include breakpoint('small') {
-        font-size: $fontSize-root;
-        width: auto;
-        padding: 15px;
-    }
 
-    svg {
-        fill: $buttonStyle-primary-color;
-    }
-
-    &:after {
-        content: '';
-        background-color: $buttonStyle-primary-color;
+    &::after {
+        content: "";
         position: absolute;
-        z-index: -1;
-        left: -20%;
-        right: -20%;
         top: 0;
-        bottom: 0;
-        transform: skewX(-45deg) scale(0, 1);
-        transition: all 0.5s;
-    }
-
-    &:hover {
-        color: $buttonStyle-primary-colorHover;
-
-        &:after {
-            transform: skewX(-45deg) scale(1, 1);
-            -webkit-transition: all 0.5s;
-            transition: all 0.5s;
-        }
+        left: -60px;
+        z-index: -1;
+        width: calc(100% + 120px);
+        height: 100%;
+        background-color: currentColor;
+        opacity: .1;
+        transform: translate3d(-100%, 0, 0) skew(30deg);
+        transition: transform .5s cubic-bezier(.33,0,0,1);
+        will-change: transform;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
     }
 
     &:focus,
     &:active {
-        color: $buttonStyle-primary-colorActive;
-        border-color: $buttonStyle-primary-borderColorActive;
-        background-color: $buttonStyle-primary-backgroundColorActive;
+        color: $buttonStyle-default-colorActive;
+        border-color: $buttonStyle-default-borderColorActive;
+        background-color: $buttonStyle-default-backgroundColorActive;
     }
 
-    &.button--action {
-        @include breakpoint('small') {
-            font-size: $fontSize-root;
-            width: auto;
-            padding: 11px 15px !important;
+    .icon--arrow-right {
+        margin: 0 0 0 4px;
+        transition: transform .5s ease;
+        transform: translateZ(0);
+        height: 36px;
+    }
+
+    &:hover {
+        color: $buttonStyle-default-colorHover;
+        border-color: $buttonStyle-default-borderColorHover;
+        background-color: $buttonStyle-default-backgroundColorHover;
+
+        &::after {
+            transform: translateZ(0);
+        }
+
+        .icon--arrow-right {
+            transform: translate3d(5px,0,0);
+        }
+    }
+    
+    // * ------ Button Default Style 2 ------
+    &.color-2 {
+        color: $buttonStyle-default-color2;
+
+        &:focus,
+        &:active {
+            color: $buttonStyle-default-colorActive2;
+        }
+
+        &:hover {
+            color: $buttonStyle-default-colorHover2;
         }
     }
 
-    &.button--full {
-        width: 100%;
+    // * ------ Button Primary ------
+    &.button--primary {
+        color: $buttonStyle-primary-color;
+        border-color: $buttonStyle-primary-borderColor;
+        background-color: $buttonStyle-primary-backgroundColor;
+
+        &:hover {
+            color: $buttonStyle-primary-colorHover;
+            border-color: $buttonStyle-primary-borderColorHover;
+            background-color: $buttonStyle-primary-backgroundColorHover;
+        }
     }
 
-    /* Secondary */
+
+    // * ------ Button Secondary ------
     &.button--secondary {
-        border-color: $buttonStyle-secondary-borderColor;
         color: $buttonStyle-secondary-color;
+        border-color: $buttonStyle-secondary-borderColor;
         background-color: $buttonStyle-secondary-backgroundColor;
-
-        svg {
-            fill: $buttonStyle-secondary-color;
-        }
-
-        &:after {
-            background-color: $buttonStyle-secondary-color;
-        }
 
         &:hover {
             color: $buttonStyle-secondary-colorHover;
-
-            &:after {
-                background-color: $buttonStyle-secondary-backgroundColorHover;
-            }
-        }
-
-        &:focus,
-        &:active {
-            color: $buttonStyle-secondary-colorActive;
-            border-color: $buttonStyle-secondary-borderColorActive;
-            background-color: $buttonStyle-secondary-backgroundColorActive;
-        }
-    }
-
-    /* Transparent */
-    &.button--transparent {
-        color: $buttonStyle-primary-colorHover;
-        background-color: transparent;
-        border-color: $buttonStyle-primary-backgroundColor;
-
-        svg {
-            fill: $buttonStyle-primary-color;
-        }
-
-        &:after {
-            background-color: $buttonStyle-primary-color;
-        }
-
-        &:hover {
-            color: $buttonStyle-primary-color;
-
-            &:after {
-                background-color: $buttonStyle-primary-backgroundColorHover;
-            }
-        }
-
-        &:focus,
-        &:active {
-            color: $buttonStyle-primary-colorActive;
-            border-color: $buttonStyle-primary-borderColorActive;
-            background-color: $buttonStyle-primary-backgroundColorActive;
-        }
-    }
-
-    /* Disable */
-    &.button--disabled {
-        pointer-events: none;
-        color: $buttonStyle-disabled-color;
-        background-color: $buttonStyle-disabled-backgroundColor;
-        border-color: $buttonStyle-disabled-borderColor;
-
-        svg {
-            fill: $buttonStyle-disabled-color;
-        }
-
-        &:after {
-            background-color: $buttonStyle-disabled-color;
+            border-color: $buttonStyle-secondary-borderColorHover;
+            background-color: $buttonStyle-secondary-backgroundColorHover;
         }
     }
 }
 
-.button[disabled] {
+.button[disabled],
+.button--disabled {
     cursor: not-allowed;
+    pointer-events: none;
 }
 
 .button--icon {
     svg {
-        fill: stencilColor('button--icon-svg-color');
+        fill: stencilColor("button--icon-svg-color");
     }
 }
