--- a/templates/components/carousel.html
+++ b/templates/components/carousel.html
@@ -4,22 +4,39 @@
         "mobileFirst": true,
         "slidesToShow": 1,
         "slidesToScroll": 1,
-        "autoplay": true,
+        "autoplay": false,
         "autoplaySpeed": {{carousel.swap_frequency}},
         "slide": "[data-hero-slide]"
     }'
 >
+
     {{#each carousel.slides}}
     {{#if button_text}}
     <div data-hero-slide="{{@index}}">
     {{else}}
-    <a href="{{url}}" data-hero-slide="{{@index}}" aria-label="{{#if this.alt_text.length '!=' 0}}{{this.alt_text}}{{else}}{{lang 'carousel.slide_number' slide_number=(add @index 1)}}{{/if}}">
+    <a rel="preload" href="{{url}}" as="image" data-hero-slide="{{@index}}" aria-label="{{#if this.alt_text.length '!=' 0}}{{this.alt_text}}{{else}}{{lang 'carousel.slide_number' slide_number=(add @index 1)}}{{/if}}">
     {{/if}}
         <div class="heroCarousel-slide {{#if ../theme_settings.homepage_stretch_carousel_images}}stretch{{/if}} {{#if @first}}heroCarousel-slide--first{{/if}}">
+            {{#if @index '==' 0}}
+                {{#if (merge this imageMobile=../theme_settings.homepage_show_carousel_0_mobile_image)}}{{/if}}
+            {{/if}}
+            {{#if @index '==' 1}}
+                {{#if (merge this imageMobile=../theme_settings.homepage_show_carousel_1_mobile_image)}}{{/if}}
+            {{/if}}
+            {{#if @index '==' 2}}
+                {{#if (merge this imageMobile=../theme_settings.homepage_show_carousel_2_mobile_image)}}{{/if}}
+            {{/if}}
+            {{#if @index '==' 3}}
+                {{#if (merge this imageMobile=../theme_settings.homepage_show_carousel_3_mobile_image)}}{{/if}}
+            {{/if}}
+            {{#if @index '==' 4}}
+                {{#if (merge this imageMobile=../theme_settings.homepage_show_carousel_4_mobile_image)}}{{/if}}
+            {{/if}}
+
             {{#if button_text}}
-            <a href="{{url}}" class="heroCarousel-image-wrapper">
+            <a href="{{url}}" class="heroCarousel-image-wrapper" style="--pb: {{multiply (divide image_height image_width) 100}}%">
             {{else}}
-            <div class="heroCarousel-image-wrapper">
+            <div class="heroCarousel-image-wrapper" style="--pb: 100%">
             {{/if}}
             {{#if @first}}
                 {{> components/common/responsive-img
@@ -36,6 +53,17 @@
                     lazyload='lazyload'
                 }}
             {{/if}}
+            
+            {{#if imageMobile}}
+                {{#if @first}}
+                    <img class="image-mobile" src="https://cdn11.bigcommerce.com/s-{{../settings.store_hash}}/product_images/uploaded_images/{{imageMobile}}" alt="{{stencil_image.alt}}" title="{{stencil_image.alt}}">
+                {{else}}
+                    <img class="lazyload image-mobile" src="{{cdn 'img/loading.svg'}}" data-src="https://cdn11.bigcommerce.com/s-{{../settings.store_hash}}/product_images/uploaded_images/{{imageMobile}}" alt="{{stencil_image.alt}}" title="{{stencil_image.alt}}">
+                {{/if}}
+            {{else}}
+                <img class="lazyload image-mobile" src="{{cdn 'img/loading.svg'}}" data-src="{{getImageSrcset stencil_image 1x=(default fallback_size '960w')}}" alt="{{stencil_image.alt}}" title="{{stencil_image.alt}}">
+            {{/if}}
+
             {{#if button_text}}
             </a>
             {{else}}
