--- a/templates/components/common/navigation-list-alternate.html
+++ b/templates/components/common/navigation-list-alternate.html
@@ -1,8 +1,8 @@
 {{#if type '==' 'category'}}
     {{#if children}}
         <p class="navPages-action navPages-action-lv1 navPages-action-depth-max has-subMenu is-root{{#if is_active}} activePage{{/if}}" data-label="{{url}}" data-index="{{@index}}">
-            <a class="text" href="{{url}}" aria-label="{{name}}">
-              <span class="hover-link">{{name}}</span>
+            <a class="text hover-link" href="{{url}}" aria-label="{{name}}">
+              <span>{{name}}</span>
             </a>
             <span class="navPages-action-moreIcon" aria-hidden="true">
                 <svg class="icon"><use href="#icon-chevron-down" /></svg>
@@ -10,15 +10,15 @@
         </p>
         {{> components/common/navigation-dropdown}}
     {{else}}
-        <a class="navPages-action navPages-action-lv1 no-subMenu navPages-action-end{{#if is_active}} activePage{{/if}}" data-label="{{url}}" href="{{url}}" aria-label="{{name}}" data-index="{{@index}}">
-          <span class="text hover-link">{{name}}</span>
+        <a class="navPages-action navPages-action-lv1 no-subMenu hover-link navPages-action-end{{#if is_active}} activePage{{/if}}" data-label="{{url}}" href="{{url}}" aria-label="{{name}}" data-index="{{@index}}">
+          <span class="text">{{name}}</span>
         </a>
     {{/if}}
 {{else if type '==' 'page'}}
     {{#if children}}
         <p class="navPages-action navPages-action-lv1 navPages-action-depth-max has-subMenu is-root{{#if name '==' page.title}} activePage{{/if}}" data-label="{{url}}" data-index="{{@index}}">
-            <a class="text {{name}}" href="{{url}}" aria-label="{{name}}">
-              <span class="hover-link">{{name}}</span>
+            <a class="text hover-link {{name}}" href="{{url}}" aria-label="{{name}}">
+              <span>{{name}}</span>
             </a>
             <span class="navPages-action-moreIcon" aria-hidden="true">
                 <svg class="icon"><use href="#icon-chevron-down" /></svg>
@@ -35,8 +35,8 @@
                     </p>
                 </li>
                 <li class="navPage-subMenu-item-child navPages-action-end navPage-subMenu-all">
-                    <a class="navPage-subMenu-action navPages-action navPages-action-lv1 no-subMenu" href="{{url}}">
-                        <span class="text hover-link">{{lang 'category.view_all.name' category=name}}</span>
+                    <a class="navPage-subMenu-action navPages-action navPages-action-lv1 no-subMenu hover-link" href="{{url}}">
+                        <span class="text">{{lang 'category.view_all.name' category=name}}</span>
                     </a>
                 </li>
                 {{#each children}}
@@ -59,13 +59,13 @@
                                         </p>
                                     </li>
                                     <li class="navPage-subMenu-item-child navPages-action-end navPage-subMenu-all">
-                                        <a class="navPage-subMenu-action navPages-action navPages-action-lv2 no-subMenu{{#if name '==' ../page.title}} activePage{{/if}}" href="{{url}}">
-                                            <span class="text hover-link">{{lang 'category.view_all.name' category=name}}</span>
+                                        <a class="navPage-subMenu-action navPages-action navPages-action-lv2 no-subMenu{{#if name '==' ../page.title}} activePage{{/if}} hover-link" href="{{url}}">
+                                            <span class="text">{{lang 'category.view_all.name' category=name}}</span>
                                         </a>
                                     </li>
                                     {{#each children}}
                                         <li class="navPage-subMenu-item-child navPages-action-end">
-                                            <a class="navPage-subMenu-action navPages-action navPages-action-lv3 no-subMenu level-3{{#if name '==' ../../page.title}} activePage{{/if}}" href="{{url}}"><span class="text hover-link">{{name}}</span></a>
+                                            <a class="navPage-subMenu-action navPages-action navPages-action-lv3 no-subMenu hover-link level-3{{#if name '==' ../../page.title}} activePage{{/if}}" href="{{url}}"><span class="text">{{name}}</span></a>
                                         </li>
                                     {{/each}}
                                 </ul>
@@ -73,15 +73,15 @@
                         </li>
                     {{else}}
                         <li class="navPage-subMenu-item-child navPages-action-end custom-fadeInLeft" data-step-animate="0">
-                            <a class="navPage-subMenu-action navPages-action navPages-action-lv2 no-subMenu{{#if name '==' ../page.title}} activePage{{/if}}" href="{{url}}"><span class="text hover-link">{{name}}</span></a>
+                            <a class="navPage-subMenu-action navPages-action navPages-action-lv2 hover-link no-subMenu{{#if name '==' ../page.title}} activePage{{/if}}" href="{{url}}"><span class="text">{{name}}</span></a>
                         </li>
                     {{/if}}
                 {{/each}}
             </ul>
         </div>
     {{else}}
-        <a class="navPages-action navPages-action-lv1 no-subMenu navPages-action-end{{#if name '==' page.title}} activePage{{/if}}" data-label="{{url}}" href="{{url}}" aria-label="{{name}}" data-index="{{@index}}">
-          <span class="text hover-link">{{name}}</span>
+        <a class="navPages-action navPages-action-lv1 no-subMenu hover-link navPages-action-end{{#if name '==' page.title}} activePage{{/if}}" data-label="{{url}}" href="{{url}}" aria-label="{{name}}" data-index="{{@index}}">
+          <span class="text">{{name}}</span>
         </a>
     {{/if}}
 {{/if}}
