--- a/templates/components/custom/header/custom-megamenu.html
+++ b/templates/components/custom/header/custom-megamenu.html
@@ -1,6 +1,6 @@
 {{#if theme_settings.customMegamenu}}
-    {{#if theme_settings.customMegamenu_type '==' 'Source'}}
-        
+    {{#if theme_settings.customMegamenuType '==' 'Source'}}
+        {{> components/custom/header/custom-megamenu-theme-file }}
     {{/if}}
     
 {{/if}}
