--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -33,7 +33,7 @@
 
     <!-- Header Bottom -->
     <div class="headerBottom">
-        <div class="navPages-container" id="menu" data-menu>
+        <div class="navPages-container hide-on-tablet" id="menu" data-menu>
             {{> components/common/navigation-menu}}
         </div>
     </div>
